# pydof

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
pydof/npk/: extractor.py  npk.py
pydof/npk/img/image/: color_board.py  factory.py  image.py  link.py  sprite.py
pydof/npk/img/image/extra/: sprite.py  zlib.py
pydof/npk/img/image/format/: convertor.py  f1555.py  f4444.py  f8888.py  factory.py  format.py
pydof/npk/img/version/: factory.py  img.py  v1.py  v2.py  v4.py  v5.py  v6.py
pydof/pvf/: file_tree.py  formatter.py  parser.py  reader.py
pydof/utils/: image.py
pydoftools/npk/: __init__.py  extractor.py  file.py
pydoftools/npk/img/image/: color_board.py  factory.py  image.py  link.py  sprite.py
pydoftools/npk/img/image/extra/: sprite.py  zlib.py
pydoftools/npk/img/image/format/: convertor.py  f1555.py  f4444.py  f8888.py  factory.py  format.py
pydoftools/npk/img/version/: factory.py  img.py  v1.py  v2.py  v4.py  v5.py  v6.py
pydoftools/pvf/: __init__.py  enums.py  header.py  parser.py  utils.py
pydoftools/utils/: io.py  zlib.py
